--- a/index.html
+++ b/index.html
@@ -49,12 +49,10 @@
     </div>
 
     <script src="js/libs/innershiv.js"></script>
-    <script src="js/libs/jquery-1.6.4.min.js"></script>
-    <script src="js/libs/jquery-ui-1.8.15.custom.min.js"></script>
-    <script src="js/plugins/jquery.tmpl.js"></script>
-    <script src="js/plugins/autocolumn.js"></script>
-    <script src="js/libs/underscore-1.1.7.min.js"></script>
-    <script src="js/libs/backbone-0.5.3.min.js"></script>
+    <script src="js/libs/jquery-1.7.2.min.js"></script>
+    <script src="js/libs/jquery.tmpl.js"></script>
+    <script src="js/libs/underscore-min.js"></script>
+    <script src="js/libs/backbone-min.js"></script>
     <script src="js/plugins/moza.js"></script>
     <script src="js/dashboard.js"></script>
 </body>
