--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
             </a>
         </div>
     </script>
-
-    <link rel="stylesheet" href="css/moza.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" href="css/style.css" type="text/css" charset="utf-8" />
     <!--[if lt IE 9]>
     <link rel="stylesheet" href="css/ie7-8.css" type="text/css" charset="utf-8" />
@@ -29,31 +27,17 @@
     <!-- end jQuery template -->
 </head>
 <body>
-    <div id="dashboard" class="home">
-        <div id="contentCtn" class="content">
-            <div class="wrapper">
-                <section id="grid"></section>
-                <div id="dCcontent"><div class="padding"></div></div>
-            </div>
-        </div>
-        <div id="toolTips">
-            <span class="arrow"></span>
-            <div class="category"></div>
-            <div class="title"></div>
-        </div>
-        <div id="data">
-            <div id="related"></div><!-- todo: create this in js. -->
-            <div id="article"></div><!-- todo: create this in js. -->
-            <div id="dImg"></div><!-- todo: create this in js. -->
-        </div>
-    </div>
 
-    <script src="js/libs/innershiv.js"></script>
-    <script src="js/libs/jquery-1.7.2.min.js"></script>
-    <script src="js/libs/jquery.tmpl.js"></script>
-    <script src="js/libs/underscore-min.js"></script>
-    <script src="js/libs/backbone-min.js"></script>
-    <script src="js/plugins/moza.js"></script>
-    <script src="js/dashboard.js"></script>
+	<div id="grid" style="width:100%;height:100%;"></div>
+	<div id="toolTips">
+		<span class="arrow"></span>
+		<div class="category"></div>
+		<div class="title"></div>
+	</div>
+    <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+    <script src="http://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
+    <script src="http://underscorejs.org/underscore.js"></script>
+	<script src="http://www.google.com/jsapi"></script>
+	<script src="js/plugins/moza.js"></script>
 </body>
 </html>
