--- a/index.html
+++ b/index.html
@@ -1,43 +1,35 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <title>Moza - jQuery plugin</title>
-    <!-- jQuery template -->
-    <script id="tileTpl" type="text/x-jquery-tmpl">
-        <div class="tile ${size}" style="width:${width}%;height:${height}%;top:${y}%;left:${x}%;" data-id="${id}">
-            <a href="#${itemUrl}">
-                <img src="${imgSrc}" border="0" style="top:-${imageTop}%;left:-${imageLeft}%;${imgWidth}${imgHeight}">
-			<span class="infos">
-				<span class="wrapper">
-					<span class="category">${categoryName}</span>
-					<span class="title">${title}</span>
+	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <link rel="stylesheet" href="css/style.css">
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+	<script id="tileTpl" type="text/x-jquery-tmpl">
+		<div class="tile ${size}" style="width:${width}%;height:${height}%;top:${y}%;left:${x}%;" data-id="${id}">
+			<a href="#${itemUrl}">
+				<img src="${imgSrc}" border="0" style="top:-${imageTop}%;left:-${imageLeft}%;${imgWidth}${imgHeight}">
+				<span class="infos">
+					<span class="wrapper">
+						<span class="category">${categoryName}</span>
+						<span class="title">${title}</span>
+					</span>
 				</span>
-			</span>
-                <span class="selected" style="width:96%;height:93%;position:absolute;top:0;left:0;border:2px solid black;display:none;border-bottom:3px solid black"></span>
-            </a>
-        </div>
-    </script>
-    <link rel="stylesheet" href="css/style.css" type="text/css" charset="utf-8" />
-    <!--[if lt IE 9]>
-    <link rel="stylesheet" href="css/ie7-8.css" type="text/css" charset="utf-8" />
-    <![endif]-->
-    <!--[if lt IE 7]>
-    <link rel="stylesheet" href="css/ie6.css" type="text/css" charset="utf-8" />
-    <![endif]-->
-    <!-- end jQuery template -->
+			</a>
+		</div>
+	</script>
 </head>
 <body>
-
-	<div id="grid" style="width:100%;height:100%;"></div>
-	<div id="toolTips">
-		<span class="arrow"></span>
-		<div class="category"></div>
-		<div class="title"></div>
+	<div id="container">
+		<header>
+			<h1>jQuery Moza plugin</h1>
+			<p>Moza est une mosaique de nouvelles. Elle est plus flexible et visuellement plus intéressante que les autres mosaïque tu même genre.</p>
+		</header>
+		<div id="moza"></div>
 	</div>
-    <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-    <script src="http://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
-    <script src="http://underscorejs.org/underscore.js"></script>
-	<script src="http://www.google.com/jsapi"></script>
-	<script src="js/plugins/moza.js"></script>
+	<script src="libs/jquery-1.8.2.min.js"></script>
+	<script src="libs/jquery.tmpl.min.js"></script>
+	<script src="libs/underscore.js"></script>
+	<script src="js/moza.js"></script>
 </body>
 </html>
