--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Moza - jQuery plugin</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	<script id="tileTpl" type="text/x-jquery-tmpl">
 		<div class="tile ${size}" style="width:${width}%;height:${height}%;top:${y}%;left:${x}%;" data-id="${id}">
@@ -27,9 +27,7 @@
 		</header>
 		<div id="moza"></div>
 	</div>
-	<script src="libs/jquery-1.8.2.min.js"></script>
-	<script src="libs/jquery.tmpl.min.js"></script>
-	<script src="libs/underscore.js"></script>
+	<script src="js/global.min.js"></script>
 	<script src="js/moza.js"></script>
 </body>
 </html>
