--- a/index.html
+++ b/index.html
@@ -1,32 +1,17 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Moza - jQuery plugin</title>
-	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" href="css/styles.css">
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-	<script id="tileTpl" type="text/x-jquery-tmpl">
-		<div class="tile ${size}" style="width:${width}%;height:${height}%;top:${y}%;left:${x}%;" data-id="${id}">
-			<a href="#${itemUrl}">
-				<img src="${imgSrc}" border="0" style="top:-${imageTop}%;left:-${imageLeft}%;${imgWidth}${imgHeight}">
-				<span class="infos">
-					<span class="wrapper">
-						<span class="category">${categoryName}</span>
-						<span class="title">${title}</span>
-					</span>
-				</span>
-			</a>
-		</div>
-	</script>
+  <title>Moza - jQuery plugin</title>
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <style media="screen">
+    #moza{
+      width:700px;
+      height:500px;
+    }
+  </style>
 </head>
 <body>
-  allo
-	<div id="container">
-		<header>
-			<h1>jQuery Moza plugin</h1>
-		</header>
-		<div id="moza"></div>
-	</div>
+	<div id="moza"></div>
 	<script src="js/global.min.js"></script>
 	<script src="js/moza.js"></script>
 </body>
