--- a/index.html
+++ b/index.html
@@ -4,23 +4,25 @@
   <title>Moza - jQuery plugin</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <style media="screen">
-      #moza{
-        border: 1px solid black;
-        width: 700px;
-        height: 300px;
-        position: relative;
-      }
-      #moza div{
-        width: 2px;
-        height: 2px;
-        background-color: black;
-        position:absolute;
-      }
+    #moza{
+      border: 1px solid black;
+      width: 700px;
+      height: 300px;
+      position: relative;
+    }
+    #moza div{
+      width: 3px;
+      height: 3px;
+      background-color: black;
+      position:absolute;
+    }
+    #moza .tile{
+      background-color: lightblue;
+    }
   </style>
 </head>
 <body>
 	<div id="moza"></div>
-	<script src="js/global.min.js"></script>
-	<script src="js/moza.js"></script>
+	<script src="dist/js/moza.js"></script>
 </body>
 </html>
