--- a/index.html
+++ b/index.html
@@ -4,15 +4,32 @@
   <title>Moza - jQuery plugin</title>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <style media="screen">
+    /*
+    #297474; //darker green
+    #369b9a;
+    #44c0bf;
+    #69cecd;
+    #8fdbda; //lighter green
+    */
     #moza{
-      width:700px;
-      height:500px;
+      border: 2px solid #69cecd;
+      width: 400px;
+      height: 400px;
+      position: relative;
     }
-  </style>
+    #moza div{
+      width: 3px;
+      height: 3px;
+      background:#69cecd;
+      position:absolute;
+    }
+    #moza .tile{
+      background-color: #8fdbda;
+    }
+   </style>
 </head>
 <body>
 	<div id="moza"></div>
-	<script src="js/global.min.js"></script>
-	<script src="js/moza.js"></script>
+	<script src="dist/js/moza.js"></script>
 </body>
 </html>
