Fix #13 - Add a global namespace for Moza and call it from index.html instead of moza.js

--- a/index.html
+++ b/index.html
@@ -33,5 +33,11 @@
 <body>
 	<div id="moza" class="moza"></div>
 	<script src="dist/js/moza.js"></script>
+  <script type="text/javascript">
+    (function() {
+      var moza = new Moza();
+      moza.build("moza", 6, 6);
+    })();
+  </script>
 </body>
 </html>
