--- a/index.html
+++ b/index.html
@@ -1,34 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Moza - jQuery plugin</title>
+  <title>Moza</title>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <style media="screen">
-    /*
-    #297474; //darker green
-    #369b9a;
-    #44c0bf;
-    #69cecd;
-    #8fdbda; //lighter green
-    */
-    .moza{
-      border: 2px solid #69cecd;
-      width: 400px;
-      height: 400px;
-      position: relative;
-      float:left;
-      margin-right:10px;
-    }
-    .moza div{
-      width: 3px;
-      height: 3px;
-      background:#69cecd;
-      position:absolute;
-    }
-    .moza .tile{
-      background-color: #8fdbda;
-    }
-   </style>
+  <link rel="stylesheet" href="dist/css/master.css">
 </head>
 <body>
   <div id="moza" class="moza"></div>
