--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script type="text/javascript">
     (function() {
       var moza = new Moza();
-      moza.build("moza", 7, 8);
+      moza.build({containerId: "moza", col: 7, row: 8});
     })();
   </script>
 </body>
