Add json loader. Its now possible to fill the tile with image that come from json

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Moza</title>
@@ -6,11 +6,17 @@
   <link rel="stylesheet" href="./dist/css/master.css">
 </head>
 <body>
-  <div id="myStage" class="moza"></div>
+  <div id="myStage1" class="moza"></div>
+  <div id="myStage2" class="moza"></div>
+  <div id="myStage3" class="moza"></div>
   <script src="./dist/js/moza.js"></script>
   <script>
-    var moza = new Moza();
-    moza.build({el: 'myStage', col:7, row:7});
+    var moza1 = new Moza();
+    moza1.build({el: 'myStage1', col:7, row:7, url: '../../data/default.json'});
+    var moza2 = new Moza();
+    moza2.build({el: 'myStage2', col:5, row:7});
+    var moza3 = new Moza();
+    moza3.build({el: 'myStage3', col:10, row:4});
   </script>
 </body>
 </html>
