--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
 </head>
 <body>
   <div id="myStage1" class="moza"></div>
-  <div id="myStage2" class="moza"></div>
-  <div id="myStage3" class="moza"></div>
   <script src="./dist/js/moza.js"></script>
   <script>
-    var moza1 = new Moza();
-    moza1.build({el: 'myStage1', col:7, row:7, url: '../../data/default.json'});
-    var moza2 = new Moza();
-    moza2.build({el: 'myStage2', col:5, row:7});
-    var moza3 = new Moza();
-    moza3.build({el: 'myStage3', col:10, row:4});
+    // var moza1 = new Moza();
+    // moza1.build({el: 'myStage1', col:7, row:7, url: '../../data/default.json'});
+    // var moza2 = new Moza();
+    // moza2.build({el: 'myStage2', col:5, row:7});
+    // var moza3 = new Moza();
+    // moza3.build({el: 'myStage3', col:10, row:4});
   </script>
 </body>
 </html>
