Move Moza().build() in index instead of moza.js

--- a/index.html
+++ b/index.html
@@ -9,12 +9,7 @@
   <div id="myStage1" class="moza"></div>
   <script src="./dist/js/moza.js"></script>
   <script>
-    // var moza1 = new Moza();
-    // moza1.build({el: 'myStage1', col:7, row:7, url: '../../data/default.json'});
-    // var moza2 = new Moza();
-    // moza2.build({el: 'myStage2', col:5, row:7});
-    // var moza3 = new Moza();
-    // moza3.build({el: 'myStage3', col:10, row:4});
+    Moza({el: 'myStage1', totalCol:7, totalRow:7, url: '../../data/default.json'}).build();
   </script>
 </body>
 </html>
